# Course_Work_4

./: .gitignore  main.py  pyproject.toml  readme.md
data/: vacancy.json
src/: classes.py  functions.py
tests/: test_classes.py  test_function.py
