[tool.poetry]
name = "course-work-4"
version = "0.1.0"
description = ""
authors = ["Aleksandr Sundeev <navigator97@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pytest = "^8.1.1"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
